--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "ant-design-vue": "^1.3.8",
+    "hydrogen-js-sdk": "^1.7.0",
     "moment": "^2.24.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
